# ChangeLog for net-im/wildfire
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/ChangeLog,v 1.16 2006/11/22 01:43:08 humpback Exp $

*wildfire-3.1.1 (22 Nov 2006)

  22 Nov 2006; Gustavo Felisberto <humpback@gentoo.org>;
  +files/build.xml-3.1.1.bz2, wildfire-3.1.0.ebuild, +wildfire-3.1.1.ebuild:
  Bumped after fixing the ebuild to match the new locations of the buuilted
  wildfire. Thanks to Hod in bug #155482 for reporting this.

  02 Nov 2006; Gustavo Felisberto <humpback@gentoo.org>;
  -files/wildfire-3.0.0-for.patch, -files/wildfire-3.0.1-for.patch,
  -wildfire-2.6.2-r2.ebuild, -wildfire-3.0.0-r1.ebuild,
  -wildfire-3.0.1.ebuild:
  Removed older versions that were no longer needed.

  20 Oct 2006; Gustavo Felisberto <humpback@gentoo.org>;
  +files/build.xml-3.1.0.bz2, -files/wildfire-3.1.0-for.patch,
  wildfire-3.1.0.ebuild:
  Removed the for patch and just the include the full build.xml . Having a
  patch has been causing LOTS of problems with dos/unix files.

  18 Oct 2006; Gustavo Felisberto <humpback@gentoo.org>;
  files/digest-wildfire-3.1.0, Manifest:
  Fixed digest. Closes bug #151821. Credits go to Naim.

*wildfire-3.1.0 (16 Oct 2006)

  16 Oct 2006; Gustavo Felisberto <humpback@gentoo.org>;
  +files/wildfire-3.1.0-for.patch, +wildfire-3.1.0.ebuild:
  Bumped version. Thanks to all in bug #150724.

  24 Aug 2006; Gustavo Felisberto <humpback@gentoo.org>;
  files/init.d/wildfire:
  Fixed stop part of init script

*wildfire-3.0.1 (28 Jul 2006)

  28 Jul 2006; Gustavo Felisberto <humpback@gentoo.org>;
  +files/wildfire-3.0.1-for.patch, +wildfire-3.0.1.ebuild:
  Version bump.

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  wildfire-3.0.0-r1.ebuild:
  ant_src_unpack -> src_unpack

*wildfire-3.0.0-r1 (09 Jul 2006)

  09 Jul 2006; Gustavo Felisberto <humpback@gentoo.org>;
  wildfire-2.6.2-r2.ebuild, -wildfire-3.0.0.ebuild,
  +wildfire-3.0.0-r1.ebuild: