@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/wildfire-3.1.1.ebuild,v 1.1 2006/11/22 01:43:08 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/wildfire-3.1.1.ebuild,v 1.2 2007/02/05 23:35:29 humpback Exp $
 
 inherit eutils java-pkg-2 java-ant-2
 
@@ -22,7 +22,7 @@ RDEPEND=" >=virtual/jre-1.5 "
 # Doesn't build against Java 1.6 due to changes in JDBC API
 DEPEND="net-im/jabber-base
 		=virtual/jdk-1.5*
-		dev-java/ant
+		>=dev-java/ant-1.6
 		dev-java/ant-contrib
 		>=dev-java/commons-net-1.4"
 
@@ -57,7 +57,7 @@ src_compile() {
 
 src_install() {
 	dodir /opt/wildfire
-	
+
 	doinitd ${FILESDIR}/init.d/wildfire
 	doconfd ${FILESDIR}/conf.d/wildfire
 
