@@ -1,6 +1,11 @@
 # ChangeLog for net-im/wildfire
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/ChangeLog,v 1.16 2006/11/22 01:43:08 humpback Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/ChangeLog,v 1.17 2007/02/05 23:35:29 humpback Exp $
+
+  05 Feb 2007; Gustavo Felisberto <humpback@gentoo.org>;
+  wildfire-3.1.1.ebuild:
+  Changed dep on ant to 1.6. Closes bug #165297. Thanks to Robert Förster for
+  reporting.
 
 *wildfire-3.1.1 (22 Nov 2006)
 
